# itch50_vwap

./: .gitignore  01302019.NASDAQ_ITCH50.callgrind.out  01302019.NASDAQ_ITCH50.time  01302020.NASDAQ_ITCH50.callgrind.out  01302020.NASDAQ_ITCH50.time  03272019.NASDAQ_ITCH50.callgrind.out  03272019.NASDAQ_ITCH50.time  CMakeLists.txt  LICENSE  Message.cpp  Message.h  README.md  benchmark.sh  callgrind.out  main.cpp
.github/workflows/: cmake-multi-platform.yml
